<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:holoflashcards="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_deck_add"
        android:icon="@drawable/ic_add_deck_dark"
        android:orderInCategory="1"
        android:title="@string/add_new_deck"
        holoflashcards:showAsAction="always"/>
    
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help"
        android:orderInCategory="2"
        android:title="@string/help"
        holoflashcards:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/menu_import"
        android:orderInCategory="100"
        android:icon="@drawable/ic_import"
        android:title="@string/import_deck"
        holoflashcards:showAsAction="never"/>
    <item
        android:id="@+id/menu_export_all"
        android:icon="@drawable/ic_export"
        android:orderInCategory="100"
        android:title="@string/export_all"
        holoflashcards:showAsAction="never"/>

</menu>